<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/yor_name_toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:text="@string/set_first_last_name"
            android:textColor="#ffa5a5a5" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:background="#889f415e"
            android:hint="@string/first_name_hint"
            android:singleLine="true"
            android:textColor="#000" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:background="#889f415e"
            android:hint="@string/last_name_hint"
            android:singleLine="true"
            android:textColor="#000" />

    </LinearLayout>

    <TextView
        android:id="@+id/cancel_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin_10dp"
        android:text="@string/cancel_registration"
        android:textColor="#ff214697" />

</FrameLayout>